trynext.output
Терминалы не используются в грамматике

   DEF
   RIGHT
   LEFT
   LEFTBRACE
   RIGHTBRACE
   STAR
   NUMBER
   ADDALL
   TYPESORT
   EXIT


Состояние 0 конфликты: 8 сдвига/вывода
Состояние 10 конфликты: 8 сдвига/вывода, 1 вывода/вывода


Грамматика

    0 $accept: EVALUATE $end

    1 EVALUATE: commands

    2 commands: command
    3         | commands command

    4 command: %empty
    5        | create
    6        | make
    7        | add
    8        | header
    9        | compare
   10        | sort
   11        | printinfo
   12        | copy

   13 path: WORD
   14     | WORD SLASH path

   15 filename: path DOT WORD

   16 create: CREATE path filename

   17 make: MAKE path path filename
   18     | MAKE path filename

   19 add: ADD filename filename

   20 copy: COPY filename path
   21     | COPY filename filename

   22 printinfo: PRINTINFO filename

   23 header: HEADER WORD

   24 compare: COMPARE filename filename

   25 sort: SORT filename
   26     | SORT filename SIGN filename


Терминальные символы с правилами, в которых они появляются

$end (0) 0
error (256)
DOT (258) 15
SLASH (259) 14
DEF (260)
RIGHT (261)
LEFT (262)
LEFTBRACE (263)
RIGHTBRACE (264)
STAR (265)
SIGN (266) 26
WORD (267) 13 14 15 23
NUMBER (268)
CREATE (269) 16
MAKE (270) 17 18
ADD (271) 19
ADDALL (272)
COPY (273) 20 21
PRINTINFO (274) 22
HEADER (275) 23
TYPESORT (276)
EXIT (277)
SORT (278) 25 26
COMPARE (279) 24


Нетерминальные символы с правилами, в которых они появляются

$accept (25)
    налево: 0
EVALUATE (26)
    налево: 1, направо: 0
commands (27)
    налево: 2 3, направо: 1 3
command (28)
    налево: 4 5 6 7 8 9 10 11 12, направо: 2 3
path (29)
    налево: 13 14, направо: 14 15 16 17 18 20
filename (30)
    налево: 15, направо: 16 17 18 19 20 21 22 24 25 26
create (31)
    налево: 16, направо: 5
make (32)
    налево: 17 18, направо: 6
add (33)
    налево: 19, направо: 7
copy (34)
    налево: 20 21, направо: 12
printinfo (35)
    налево: 22, направо: 11
header (36)
    налево: 23, направо: 8
compare (37)
    налево: 24, направо: 9
sort (38)
    налево: 25 26, направо: 10


State 0

    0 $accept: . EVALUATE $end
    1 EVALUATE: . commands
    2 commands: . command
    3         | . commands command
    4 command: . %empty  [$end, CREATE, MAKE, ADD, COPY, PRINTINFO, HEADER, SORT, COMPARE]
    5        | . create
    6        | . make
    7        | . add
    8        | . header
    9        | . compare
   10        | . sort
   11        | . printinfo
   12        | . copy
   16 create: . CREATE path filename
   17 make: . MAKE path path filename
   18     | . MAKE path filename
   19 add: . ADD filename filename
   20 copy: . COPY filename path
   21     | . COPY filename filename
   22 printinfo: . PRINTINFO filename
   23 header: . HEADER WORD
   24 compare: . COMPARE filename filename
   25 sort: . SORT filename
   26     | . SORT filename SIGN filename

    CREATE     сдвиг, и переход в состояние 1
    MAKE       сдвиг, и переход в состояние 2
    ADD        сдвиг, и переход в состояние 3
    COPY       сдвиг, и переход в состояние 4
    PRINTINFO  сдвиг, и переход в состояние 5
    HEADER     сдвиг, и переход в состояние 6
    SORT       сдвиг, и переход в состояние 7
    COMPARE    сдвиг, и переход в состояние 8

    CREATE     [вывод с использованием правила 4 (command)]
    MAKE       [вывод с использованием правила 4 (command)]
    ADD        [вывод с использованием правила 4 (command)]
    COPY       [вывод с использованием правила 4 (command)]
    PRINTINFO  [вывод с использованием правила 4 (command)]
    HEADER     [вывод с использованием правила 4 (command)]
    SORT       [вывод с использованием правила 4 (command)]
    COMPARE    [вывод с использованием правила 4 (command)]
    $default   вывод с использованием правила 4 (command)

    EVALUATE   переход в состояние 9
    commands   переход в состояние 10
    command    переход в состояние 11
    create     переход в состояние 12
    make       переход в состояние 13
    add        переход в состояние 14
    copy       переход в состояние 15
    printinfo  переход в состояние 16
    header     переход в состояние 17
    compare    переход в состояние 18
    sort       переход в состояние 19


State 1

   13 path: . WORD
   14     | . WORD SLASH path
   16 create: CREATE . path filename

    WORD  сдвиг, и переход в состояние 20

    path  переход в состояние 21


State 2

   13 path: . WORD
   14     | . WORD SLASH path
   17 make: MAKE . path path filename
   18     | MAKE . path filename

    WORD  сдвиг, и переход в состояние 20

    path  переход в состояние 22


State 3

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   19 add: ADD . filename filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 24


State 4

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   20 copy: COPY . filename path
   21     | COPY . filename filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 25


State 5

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   22 printinfo: PRINTINFO . filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 26


State 6

   23 header: HEADER . WORD

    WORD  сдвиг, и переход в состояние 27


State 7

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   25 sort: SORT . filename
   26     | SORT . filename SIGN filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 28


State 8

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   24 compare: COMPARE . filename filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 29


State 9

    0 $accept: EVALUATE . $end

    $end  сдвиг, и переход в состояние 30


State 10

    1 EVALUATE: commands .  [$end]
    3 commands: commands . command
    4 command: . %empty  [$end, CREATE, MAKE, ADD, COPY, PRINTINFO, HEADER, SORT, COMPARE]
    5        | . create
    6        | . make
    7        | . add
    8        | . header
    9        | . compare
   10        | . sort
   11        | . printinfo
   12        | . copy
   16 create: . CREATE path filename
   17 make: . MAKE path path filename
   18     | . MAKE path filename
   19 add: . ADD filename filename
   20 copy: . COPY filename path
   21     | . COPY filename filename
   22 printinfo: . PRINTINFO filename
   23 header: . HEADER WORD
   24 compare: . COMPARE filename filename
   25 sort: . SORT filename
   26     | . SORT filename SIGN filename

    CREATE     сдвиг, и переход в состояние 1
    MAKE       сдвиг, и переход в состояние 2
    ADD        сдвиг, и переход в состояние 3
    COPY       сдвиг, и переход в состояние 4
    PRINTINFO  сдвиг, и переход в состояние 5
    HEADER     сдвиг, и переход в состояние 6
    SORT       сдвиг, и переход в состояние 7
    COMPARE    сдвиг, и переход в состояние 8

    $end       вывод с использованием правила 1 (EVALUATE)
    $end       [вывод с использованием правила 4 (command)]
    CREATE     [вывод с использованием правила 4 (command)]
    MAKE       [вывод с использованием правила 4 (command)]
    ADD        [вывод с использованием правила 4 (command)]
    COPY       [вывод с использованием правила 4 (command)]
    PRINTINFO  [вывод с использованием правила 4 (command)]
    HEADER     [вывод с использованием правила 4 (command)]
    SORT       [вывод с использованием правила 4 (command)]
    COMPARE    [вывод с использованием правила 4 (command)]
    $default   вывод с использованием правила 1 (EVALUATE)

    command    переход в состояние 31
    create     переход в состояние 12
    make       переход в состояние 13
    add        переход в состояние 14
    copy       переход в состояние 15
    printinfo  переход в состояние 16
    header     переход в состояние 17
    compare    переход в состояние 18
    sort       переход в состояние 19


State 11

    2 commands: command .

    $default  вывод с использованием правила 2 (commands)


State 12

    5 command: create .

    $default  вывод с использованием правила 5 (command)


State 13

    6 command: make .

    $default  вывод с использованием правила 6 (command)


State 14

    7 command: add .

    $default  вывод с использованием правила 7 (command)


State 15

   12 command: copy .

    $default  вывод с использованием правила 12 (command)


State 16

   11 command: printinfo .

    $default  вывод с использованием правила 11 (command)


State 17

    8 command: header .

    $default  вывод с использованием правила 8 (command)


State 18

    9 command: compare .

    $default  вывод с использованием правила 9 (command)


State 19

   10 command: sort .

    $default  вывод с использованием правила 10 (command)


State 20

   13 path: WORD .  [$end, DOT, WORD, CREATE, MAKE, ADD, COPY, PRINTINFO, HEADER, SORT, COMPARE]
   14     | WORD . SLASH path

    SLASH  сдвиг, и переход в состояние 32

    $default  вывод с использованием правила 13 (path)


State 21

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   16 create: CREATE path . filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 33


State 22

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   17 make: MAKE path . path filename
   18     | MAKE path . filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 34
    filename  переход в состояние 35


State 23

   15 filename: path . DOT WORD

    DOT  сдвиг, и переход в состояние 36


State 24

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   19 add: ADD filename . filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 37


State 25

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   20 copy: COPY filename . path
   21     | COPY filename . filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 38
    filename  переход в состояние 39


State 26

   22 printinfo: PRINTINFO filename .

    $default  вывод с использованием правила 22 (printinfo)


State 27

   23 header: HEADER WORD .

    $default  вывод с использованием правила 23 (header)


State 28

   25 sort: SORT filename .  [$end, CREATE, MAKE, ADD, COPY, PRINTINFO, HEADER, SORT, COMPARE]
   26     | SORT filename . SIGN filename

    SIGN  сдвиг, и переход в состояние 40

    $default  вывод с использованием правила 25 (sort)


State 29

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   24 compare: COMPARE filename . filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 41


State 30

    0 $accept: EVALUATE $end .

    $default  принять


State 31

    3 commands: commands command .

    $default  вывод с использованием правила 3 (commands)


State 32

   13 path: . WORD
   14     | . WORD SLASH path
   14     | WORD SLASH . path

    WORD  сдвиг, и переход в состояние 20

    path  переход в состояние 42


State 33

   16 create: CREATE path filename .

    $default  вывод с использованием правила 16 (create)


State 34

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   15         | path . DOT WORD
   17 make: MAKE path path . filename

    DOT   сдвиг, и переход в состояние 36
    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 43


State 35

   18 make: MAKE path filename .

    $default  вывод с использованием правила 18 (make)


State 36

   15 filename: path DOT . WORD

    WORD  сдвиг, и переход в состояние 44


State 37

   19 add: ADD filename filename .

    $default  вывод с использованием правила 19 (add)


State 38

   15 filename: path . DOT WORD
   20 copy: COPY filename path .  [$end, CREATE, MAKE, ADD, COPY, PRINTINFO, HEADER, SORT, COMPARE]

    DOT  сдвиг, и переход в состояние 36

    $default  вывод с использованием правила 20 (copy)


State 39

   21 copy: COPY filename filename .

    $default  вывод с использованием правила 21 (copy)


State 40

   13 path: . WORD
   14     | . WORD SLASH path
   15 filename: . path DOT WORD
   26 sort: SORT filename SIGN . filename

    WORD  сдвиг, и переход в состояние 20

    path      переход в состояние 23
    filename  переход в состояние 45


State 41

   24 compare: COMPARE filename filename .

    $default  вывод с использованием правила 24 (compare)


State 42

   14 path: WORD SLASH path .

    $default  вывод с использованием правила 14 (path)


State 43

   17 make: MAKE path path filename .

    $default  вывод с использованием правила 17 (make)


State 44

   15 filename: path DOT WORD .

    $default  вывод с использованием правила 15 (filename)


State 45

   26 sort: SORT filename SIGN filename .

    $default  вывод с использованием правила 26 (sort)
